Fix overlapping containers

--- a/style.css
+++ b/style.css
@@ -449,7 +449,7 @@ overflow:hidden;
 
 .portfolio {
     min-height: 100dvh;
-    height: 100dvh;
+    
     display: flex;
     flex-direction: column;
     justify-content: center;
